--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@
   --font-primary: 'Poppins', sans-serif;
   --font-secondary: 'Arvo', serif;
   --font-code: 'Roboto', monospace;
-  --bg-color: #00163f;
-  --font-color: #ffffff;
-  --btn-bg-color: #ffffff;
-  --accent-color: #be7efe;
-  --header-shadow: #000 0px 0px 5px;
+  background-image: url(images/Background.jpg);
+  --font-color: #f7f3f3;
+  --btn-bg-color: #000000;
+  --accent-color: #51049e;
+  --header-shadow: rgb(0, 0, 0) 0px 0px 5px;
 }
 
+
+S
 * {
   padding: 0;
   margin: 0;
