--- a/style.css
+++ b/style.css
@@ -161,7 +161,8 @@ section {
 
 @media screen and (max-width: 768px) {
   .menu {
-    gap: 1rem;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
   }
   .wallet-btn {
@@ -176,4 +177,3 @@ section {
     font-size: 1rem;
   }
 }
- 
