--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .container {
-  max-width: 960px;
+  width: 100%;
   margin: 0 auto;
   padding: 1rem 2rem;
 
@@ -161,8 +161,7 @@ section {
 
 @media screen and (max-width: 768px) {
   .menu {
-    display: flex;
-    justify-content: space-between;
+    gap: 1rem;
     align-items: center;
   }
   .wallet-btn {
