--- a/style.css
+++ b/style.css
@@ -1,160 +1,130 @@
-/* FONTS */
-
-@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
-/* GLOBAL STYLES */
-
-:root {
-  --font-primary: 'Poppins', sans-serif;
-  --font-secondary: 'Arvo', serif;
-  --font-code: 'Roboto', monospace;
-  --font-color: #f7f3f3;
-  --btn-bg-color: #000000;
-  --accent-color: #51049e;
-  --header-shadow: rgb(0, 0, 0) 0px 0px 5px;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+.hero{
+    width: 100%;
+    height: 100vh;
+    background-image: url(/images/background.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
+}
+.logo{
+    width: 80px;
+    cursor: pointer;
+}
+.navbar{
+    width: 85%;
+    height: 15%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+button{
+    color: #fbfcfc;
+    padding: 10px 25px;
+    background: transparent;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+}
+.content{
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 8%;
+    transform: translateY(-50%);
+    z-index: 2;
+}
+h1{
+    font-size: 80px;
+    margin: 10px 0 30px;
+    line-height: 80px;
+}
+.side-bar{
+    width: 50px;
+    height: 100vh;
+    background: linear-gradient(#00545d, #000729);
+    position: absolute;
+    right: 0;
+    top: 0;    
+}
+.menu{
+    display: block;
+    width: 25px;
+    margin: 40px auto 0;
+    cursor: pointer;
+}
+.social-links img{
+    width: 30px;
+    margin: 20px auto;
+    cursor: pointer;
+}
+.social-links{
+    width: 50px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.brains img{
+    width: 80px;
+    animation: bubble 7s linear infinite;
+}
+.brains{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: absolute;
+    bottom: -70px;
 }
 
-
-S
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+@keyframes bubble{
+    0%{
+        transform: translateY(0);
+        opacity: 0;
+    }
+    50%{
+    
+        opacity: 1;
+    }
+    70%{
+       
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(-80vh);
+        opacity: 0;
+    }
 }
-
-body {
-  background-color: var(--bg-color);
-  display: flex;
-  flex-flow: column;
-  background-image: url(/images/Background.jpg);
-  color: var(--font-color);
-  font-family: var(--font-primary);
- 
+.brains img:nth-child(1){
+    animation-delay: 2s;
+    width: 25px;
 }
-
-.container {
-  display: flex;
-  margin: 0 auto;
-  padding: 1rem 2rem;
-
+.brains img:nth-child(2){
+    animation-delay: 1s;
 }
-
-/* HEADER */
-
-header {
-  box-shadow: var(--header-shadow);
-  background-color: #47049e85;
+.brains img:nth-child(3){
+    animation-delay: 3s;
+    width: 25px;
 }
-
-header .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.brains img:nth-child(4){
+    animation-delay: 4.5s;
 }
-
-.menu {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
+.brains img:nth-child(5){
+    animation-delay: 3s;
 }
-
-/* BUTTONS */
-
-.btn {
-  display: inline-block;
-  padding: 1rem 2rem;
-  background: var(--btn-bg-color);
-  color: var(--accent-color);
-  font-family: var(--font-secondary);
-  font-style: italic;
-  font-weight: bold;
-  font-size: 1rem;
-  text-transform: capitalize;
-  transition: all 0.3s ease;
-  box-shadow: 4px 4px 0 0 var(--accent-color);
-  cursor: pointer;
-  position: relative;
-  text-decoration: none;
-  outline: none;
+.brains img:nth-child(6){
+    animation-delay: 6s;
+    width: 20px;
 }
-.btn:hover {
-  box-shadow: none;
+.brains img:nth-child(7){
+    animation-delay: 7s;
+    width: 35px;
 }
-
-.wallet-btn {
-  border-radius: 5rem;
-  margin-left: 2rem;
-  border-color: transparent;
-}
-
-.hero-btn {
-  border-radius: 4px;
-  font-size: 1.2rem;
-  padding: 1.5rem 3rem;
-}
-
-/* COUNTDOWN SECTION */
-
-section {
-  flex: 1 1 auto;
-}
-
-.countdown {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.countdown ul {
-  display: flex;
-  gap: 2rem
-}
-.countdown .clock-item {
-  list-style: none;
-  width: 70px;
-  height: auto;
-}
-.countdown .clock-item .count-number {
-  background: var(--accent-color);
-  color: var(--font-color);
-  font-size: 2rem;
-  font-weight: 700;
-  font-family: var(--font-secondary);
-  padding: 1rem;
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  line-height: 1;
-  border-radius: 4px 4px 0 0;
-}
-.countdown .clock-item .count-text {
-  background: var(--btn-bg-color);
-  font-family: var(--font-secondary);
-  font-size: 1.1rem;
-  color: var(--bg-color);
-  padding: 0.5rem 0.7rem;
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  line-height: 1;
-  border-radius: 0 0 4px 4px;
-}
-
-.countdown h1 {
-  text-shadow: 2px 2px 0 var(--accent-color);
-  font-style: italic;
-  margin: 2rem 0;
-  font-size: 3.5rem;
-  text-align: center;
-}
-
-.countdown p {
-  font-size: 1.1rem;
-  font-family: var(--font-secondary);
-  margin-bottom: 2rem;
-  text-align: center;
-}
-
-
